@startuml

class Bank
class TextUI
class Customer
class Account

Main *-- TextUI
Main *-- Bank
Bank *-- Customer
Customer *-- Account

Main : + Main()

TextUI : +String getInput(String msg)
TextUI : -Scanner input

Bank : -ArrayList<Customer> customers
Bank : + int customerLimit
Bank : + void registerCustomer(String name)

Customer : -int id
Customer : -String name
Customer : -Account account
Customer : -{static} int counter
Customer : +Customer(String name)
Customer : +int getId()
Customer : +String getName()

Account : - int balance
Account : + int getBalance()
Account : +setBalance(int amount)



@enduml

